# monorepo_template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile
.github/: CODEOWNERS
backend/: justfile  pyproject.toml
backend/django/: .env.example  Dockerfile  Dockerfile.dockerignore  README.md  compose.yaml  justfile  pyproject.toml
backend/django/apps/core/: exceptions.py  models.py
backend/django/apps/notifications/: api.py  serializers.py  service.py  urls.py
backend/django/apps/notifications/migrations/: 0001_initial.py
backend/django/apps/notifications/models/: __init__.py  notification_model.py
backend/django/apps/notifications/tasks/: __init__.py  send_notification.py
backend/django/config/: celery.py  urls.py
backend/django/config/settings/: base.py  test.py
backend/django/tests/: test_notifications_api.py
backend/ml/: Dockerfile  README.md  compose.yml  justfile  pyproject.toml
backend/ml/algorithm/: README.md  pyproject.toml
backend/ml/algorithm/src/algorithm/: __init__.py  models.py  recommend.py
backend/ml/algorithm/tests/: test_recommend.py
backend/ml/evaluation/: README.md  pyproject.toml
backend/typings/: README.md
backend/typings/example_lib/: __init__.pyi
backend/util/: README.md  pyproject.toml
backend/util/src/util/: __init__.py  env.py  logging.py
backend/util/tests/: test_env.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
infrastructure/: README.md
infrastructure/environments/production/: main.tf
infrastructure/environments/staging/: main.tf
infrastructure/modules/api/: main.tf
