[project]
# Note: not just "django" to avoid colliding with the Django framework
# dependency declared below.
name = "django-monolith"
version = "0.1.0"
description = "Django monolith for the monorepo template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "django-filter>=24.0",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "gunicorn>=22.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "drf-spectacular>=0.27",
    "structlog>=24.0",
    "django-structlog[celery]>=8.0",
    "util",
]

[tool.uv.sources]
util = { path = "../util", editable = true }

[dependency-groups]
dev = [
    "django-types>=0.20",
    "djangorestframework-types>=0.9",
    "factory-boy>=3.3",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "watchdog[watchmedo]>=4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]
