[project]
name = "util"
version = "0.1.0"
description = "Shared utilities (logging, env helpers) used by the API and ML workspaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["structlog>=24.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/util"]
