[project]
name = "algorithm"
version = "0.1.0"
description = "Toy optimisation algorithm — pure-Python library; the Dockerfile demonstrates packaging it as a deployable artefact."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
    "util",
]

[tool.uv.sources]
util = { path = "../../util", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algorithm"]
